--- a/app/wechatpay/pay.html
+++ b/app/wechatpay/pay.html
@@ -8,9 +8,9 @@
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>微信支付</title>
   <link rel="stylesheet" type="text/css" href="/bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/css/globe.css">
-  <link rel="stylesheet" type="text/css" href="/css/app.css">
-  <link rel="stylesheet" type="text/css" href="pay.css">
+  <link rel="stylesheet" type="text/css" href="/css/globe.css?rev=f706ec094b4acc4df6c24f3cb0ba3d40">
+  <link rel="stylesheet" type="text/css" href="/css/app.css?rev=b290d9420b78a2f2670c6412a3efdb5a">
+  <link rel="stylesheet" type="text/css" href="pay.css?rev=a913092f839117740e98a30e411ff544">
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 </head>
 
@@ -93,8 +93,8 @@
 <script src="/bower_components/angular/angular.min.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="/bower_components/angular-route/angular-route.min.js"></script>
-<script src="/js/util.js?v=aafafafvavafasdfasdasdaf"></script>
-<script src="pay.js?v=aafafafvavafasdasdffaafasdsdasfasddaf"></script>
+<script src="/js/util.js?rev=b43f7db63eee66cfdc87bd37a8f0a923"></script>
+<script src="pay.js?rev=8449904fb0e7128133d1006e91177c68"></script>
 
 
 
