simple auto commit

--- a/app/wechatpay/pay.html
+++ b/app/wechatpay/pay.html
@@ -21,11 +21,11 @@
       <p class="weui_toast_content" style="display:inline;">{{server_reason}}</p>
     </div>
   </div>
-<header>
+<header  ng-cloak>
 	订单编号:{{order_no}}
 </header>
 
-<div class="product-container">
+<div class="product-container"  ng-cloak>
 	<!-- <div class="name">产品名称：{{insurance_plan_name}}</div> -->
 	<div class="name">产品方案</div>
 
@@ -94,7 +94,7 @@
 <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="/bower_components/angular-route/angular-route.min.js"></script>
 <script src="/js/util.js?rev=b43f7db63eee66cfdc87bd37a8f0a923"></script>
-<script src="pay.js?rev=8449904fb0e7128133d1006e91177c68"></script>
+<script src="pay.js?rev=602cb6babca1bbf81c91937b50c7993a"></script>
 
 
 
