--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
       opacity: 1 !important;    /* */
     }
   </style>
-  <link rel="stylesheet" href="css/output/application.min.css?rev=b48f45b46e41c59539b0c72e1a32f89a">
+  <link rel="stylesheet" href="css/output/application.min.css?rev=eebe5500623c7dbcec957169fdddadea">
   <!-- <link rel="stylesheet" href="js/lcalendar/dist/css/LCalendar.min.css"  > -->
   <script src="js/lcalendar/dist/js/LCalendar.js"></script>
   </head>
@@ -53,11 +53,17 @@
     <div class="swiper-slide slide" style="width: 260px;" ><img class="img2" onclick="goSpecial()" src="img/index_img/special.png" ></div>
   </div>
 </div>
-
+<!--诺贝 header *tailu* -->
+<div class="qrcode-wrapper">
+  <div class="qrcode-container" >
+     <img src="img/temai/new_qrcode.png" >   
+  </div>
+</div>
+<!--诺贝 header end -->
 <!-- /wrapper -->
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=c035a89fa1e6dd8ce10360667fbd189a"></script>
+  <script src="js/output/application.min.js?rev=1e2d0487a517467b3b502a69b63c73f4"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
   <script  src="/js/agecommon.js?rev=decd93797a37e97b67a65ccc0bd02441"></script>
   <script  src="/js/dashboard.js?rev=87fa22737de17a50877b47e828ffe00f"></script>
@@ -77,7 +83,6 @@
  
 
   <script type="text/javascript" >
-
   //百度统计
    var _hmt = _hmt || [];
     _hmt.push(['_setAutoPageview', false]);
@@ -87,46 +92,55 @@
       var s = document.getElementsByTagName("script")[0]; 
       s.parentNode.insertBefore(hm, s);
     })();
-
-
    $("body").on("focus","input",function(){
          //$(this).parents(".cell_hd").siblings(".line").addClass("line_focus");
          $(this).parents(".cell_hd").addClass("cell_hd_foucs");
    }) .on("blur","input",function(){
          //$(this).parents(".cell_hd").siblings(".line").removeClass("line_focus");
          $(this).parents(".cell_hd").removeClass("cell_hd_foucs");
-   }) 
-  $(function(){
-
-        //解决高清屏1px 边框的问题
-        if (window.devicePixelRatio && devicePixelRatio > 1) {
-            var testEle = document.createElement('div');
-            testEle.style.border = '.5px solid transparent';
-            document.body.appendChild(testEle);
-            if (testEle.offsetHeight == 1) {
-                document.querySelector('html').classList.add('hairlines');
-            }
-            document.body.removeChild(testEle);
-        }
-
-        $("body").on("click",".mask",function(){
-          $(".mask").hide();
-        }).on("click",".close",function(){
-          $(".mask").hide();
-        }).on("click",".toast",function(){
-            return false;
-        }).on("click",".fixed-top",function(){
-            $(window).scrollTop(0);
-        })
-       $(window).scroll(function(){
-        var y=$(document).scrollTop();
-        if(y>600){
-          $('.fixed-top').fadeIn();
-        }else{
-          $('.fixed-top').fadeOut();
-        }
-      })
    });
+
+  $(function(){
+    if (window.devicePixelRatio && devicePixelRatio > 1) {
+      var testEle = document.createElement('div');
+      testEle.style.border = '.5px solid transparent';
+      document.body.appendChild(testEle);
+      if (testEle.offsetHeight == 1) {
+          document.querySelector('html').classList.add('hairlines');
+      }
+      document.body.removeChild(testEle);
+    }
+
+    $("body").on("click",".mask",function(){
+      $(".mask").hide();
+    }).on("click",".close",function(){
+      $(".mask").hide();
+    }).on("click",".toast",function(){
+        return false;
+    }).on("click",".fixed-top",function(){
+        $(window).scrollTop(0);
+    })
+    $(window).scroll(function(){
+      var y=$(document).scrollTop();
+      if(y>600){
+        $('.fixed-top').fadeIn();
+      }else{
+        $('.fixed-top').fadeOut();
+      }
+    })
+    /*诺贝 header *tailu**/
+    $("body").on("click","#foucs_button",function(event){
+      $(".qrcode-wrapper").show();
+      event.preventDefault();
+      event.stopPropagation();
+    }).on("click",".qrcode-container",function(){
+      event.preventDefault();
+      event.stopPropagation();
+    }).on("click",".qrcode-wrapper",function(){
+       $(".qrcode-wrapper").hide();
+    });
+    /*诺贝 header end*/
+  });
 
   window.onerror = function(message,file,line){
     _hmt.push(['_trackEvent', 'window_onerror','file:'+file+'_line:'+line+'_message:'+message]);
