--- a/app/wechatpay/pay.html
+++ b/app/wechatpay/pay.html
@@ -8,7 +8,7 @@
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>微信支付</title>
   <link rel="stylesheet" type="text/css" href="/bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/css/globe.css?rev=84f383accdefd3aa0153c14ff65b8c48">
+  <link rel="stylesheet" type="text/css" href="/css/globe.css?rev=53d96877de380ef0ba7a30a15bcbd739">
   <link rel="stylesheet" type="text/css" href="/css/app.css?rev=b290d9420b78a2f2670c6412a3efdb5a">
   <link rel="stylesheet" type="text/css" href="pay.css?rev=a913092f839117740e98a30e411ff544">
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
@@ -83,12 +83,14 @@
 	</form>
 </div>
 
-<div style="padding:30px 0;">
+<!-- <div style="padding:30px 0;">
 	<div class="cell"  style="overflow: hidden;position: fixed;bottom:0;width:100%;border-radius:0;">
 		<a href="javascript:void(0)" class="btn btn_n_primary "  ng-click="submit()">立即支付</a>
 	</div>
+</div> -->
+<div class="bottom_ctrl">
+	<div class="finish" ng-click="submit()">立即支付</div>
 </div>
-
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/bower_components/angular/angular.min.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
