simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -52,11 +52,13 @@
 <!-- /wrapper -->
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-  <script src="js/output/application.min.js?rev=517008f9805b6f90b50a47db2efa0d54"></script>
+  <script src="js/output/application.min.js?rev=050898856dbed6b276d73ef6f8e37817"></script>
   <script src="js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
   <script  src="/js/agecommon.js?rev=decd93797a37e97b67a65ccc0bd02441"></script>
   <script  src="/js/dashboard.js?rev=8f442602d28b84c06cee7ec15349ac9b"></script>
+
   <!--
+  <script src="js/main_controllers.js"></script>
   <script src="js/angular-busy.min.js"></script>
   <script src="js/transaction_controllers.js"></script>
   <script src="js/util.js"></script>
