修改图片相对路径

--- a/app/activity/mobile.html
+++ b/app/activity/mobile.html
@@ -7,8 +7,8 @@
   <meta name="keywords" content="">
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> 
   <title>诺贝保险管家</title>
-  <link rel="stylesheet" type="text/css" href="bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" href="mobile.css?rev=dfkjdk">
+  <link rel="stylesheet" type="text/css" href="http://static.nuobei.cn/bower_components/normalize-css/normalize.css">
+  <link rel="stylesheet" href="http://static.nuobei.cn/activity/mobile.css?rev=dfkjdk">
   <script>
   	var browser={
     versions:function(){ 
