--- a/app/wx_share.html
+++ b/app/wx_share.html
@@ -30,7 +30,7 @@
     </script>
   <link rel="stylesheet" type="text/css" href="http://static.nuobei.cn/wx_share/css/wx_share.min.css?rev=9560a9bd635e26affe715992a9a17dd7">
   <!--
-   <link rel="stylesheet" type="text/css" href="bower_components/normalize-css/normalize.css">
+   <link rel="stylesheet" type="text/css" href="http://static.nuobei.cn/bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="http://static.nuobei.cn/wx_share/css/style.css?rev=7527ccafe7f0051e90bddb4c57291a29">--></head>
 <body  ontouchstart="">
   <main class="content" ng-view></main>
