--- a/app/wechatpay/pay.html
+++ b/app/wechatpay/pay.html
@@ -9,10 +9,10 @@
   <title>微信支付</title>
       <?php include('include/global_config.html'); ?>
 
-  <link rel="stylesheet" type="text/css" href="/bower_components/normalize-css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="/css/globe.css?rev=038ae4d50632be39d5adb283404c745b">
-  <link rel="stylesheet" type="text/css" href="/css/app.css?rev=364a6dd862585e5cf7601674a9e5d054">
-  <link rel="stylesheet" type="text/css" href="pay.css?rev=a4b03a69f488f3abadab3d05a051a2c6">
+  <link rel="stylesheet" type="text/css" href="http://static.nuobei.cn/bower_components/normalize-css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="http://static.nuobei.cn/css/globe.css?rev=038ae4d50632be39d5adb283404c745b">
+  <link rel="stylesheet" type="text/css" href="http://static.nuobei.cn/css/app.css?rev=364a6dd862585e5cf7601674a9e5d054">
+  <link rel="stylesheet" type="text/css" href="http://static.nuobei.cn/wechatpay/pay.css?rev=a4b03a69f488f3abadab3d05a051a2c6">
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 </head>
 
@@ -93,12 +93,12 @@
 <div class="bottom_ctrl">
 	<div class="finish" ng-click="submit()">立即支付</div>
 </div>
-<script src="/bower_components/jquery/dist/jquery.min.js"></script>
-<script src="/bower_components/angular/angular.min.js"></script>
-<script src="/bower_components/angular-resource/angular-resource.min.js"></script>
-<script src="/bower_components/angular-route/angular-route.min.js"></script>
-<script src="/js/util.js?rev=075a24649c317a44ff7a046256849fc8"></script>
-<script src="pay.js?rev=734e309604914030d01300be9818dc49"></script>
+<script src="http://static.nuobei.cn/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="http://static.nuobei.cn/bower_components/angular/angular.min.js"></script>
+<script src="http://static.nuobei.cn/bower_components/angular-resource/angular-resource.min.js"></script>
+<script src="http://static.nuobei.cn/bower_components/angular-route/angular-route.min.js"></script>
+<script src="http://static.nuobei.cn/js/util.js?rev=075a24649c317a44ff7a046256849fc8"></script>
+<script src="http://static.nuobei.cn/wechatpay/pay.js?rev=734e309604914030d01300be9818dc49"></script>
 
 
 
