前台加白名单

--- a/app/wechatpay/pay.html
+++ b/app/wechatpay/pay.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="微信支付">
   <meta name="viewport"content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>微信支付</title>
-      <?php include('include/global_config.html'); ?>
+      <?php include(__DIR__ . '/../include/global_config.html'); ?>
 
   <link rel="stylesheet" type="text/css" href="/bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" type="text/css" href="/css/globe.css?rev=038ae4d50632be39d5adb283404c745b">
@@ -97,7 +97,7 @@
 <script src="/bower_components/angular/angular.min.js"></script>
 <script src="/bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="/bower_components/angular-route/angular-route.min.js"></script>
-<script src="/js/util.js?rev=42bc87b3293813a09d6afa6c13699c89"></script>
+<script src="/js/util.js?rev=c410c7357a7e2ec4277c6f7f64cf4ffb"></script>
 <script src="/wechatpay/pay.js?rev=734e309604914030d01300be9818dc49"></script>
 
 
