--- a/app/index.html
+++ b/app/index.html
@@ -57,8 +57,8 @@
   <script src="/js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
   <script  src="/js/agecommon.js?rev=decd93797a37e97b67a65ccc0bd02441"></script>
   <script  src="/js/dashboard.js?rev=eb7f2b950cc005aab7db10aa48298969"></script>
-  <script src="/js/app.js"></script>
-  <script src="/js/main_controllers.js"></script>
+  <!-- <script src="/js/app.js"></script> -->
+  <!-- <script src="/js/main_controllers.js"></script> -->
   
   <!--
   <script src="/js/angular-busy.min.js"></script>
