simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -54,10 +54,13 @@
 
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 
-  <script src="/js/output/application.min.js?rev=53e050261a2daf6f02a17d740f7fb077"></script>
-  <script src="/js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
+  <script src="/js/slider_component.js?rev=dec4a883aed7ae2b2824cb6edbded361"></script>
+  <script src="/js/select.js?rev=ac810039ad888c00bc9b4e5de05db0a7"></script>
   <script  src="/js/agecommon.js?rev=decd93797a37e97b67a65ccc0bd02441"></script>
   <script  src="/js/dashboard.js?rev=eb7f2b950cc005aab7db10aa48298969"></script>
+  <script src="/js/output/application.min.js?rev=63c8f75966342da2a46c205ea3e40f15"></script>
+  <script src="/js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
+ 
   <!-- <script src="/js/app.js"></script> -->
   <!-- <script src="/js/main_controllers.js"></script> -->
   
