simple auto commit

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
       opacity: 1 !important;    /* */
     }
   </style>
-  <link rel="stylesheet" href="/css/output/application.min.css?rev=598345bdcad1093b7dfcca4c00d145ba">
+  <link rel="stylesheet" href="/css/output/application.min.css?rev=2a99f480aac94c103c05cbbf40a35cdc">
   <!-- <link rel="stylesheet" href="/js/lcalendar/dist/css/LCalendar.min.css"  > -->
   <script src="/js/lcalendar/dist/js/LCalendar.js"></script>
   </head>
@@ -55,8 +55,8 @@
   <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 
   <script src="/js/slider_component.js?rev=dec4a883aed7ae2b2824cb6edbded361"></script>
-
-  <script src="/js/output/application.min.js?rev=b891fde96f52a4a5d44560aacf1a4740"></script>
+<script src="/js/select.js?rev=a2b08d6ab68301a645821a601aac8853"></script>
+  <script src="/js/output/application.min.js?rev=d8fbc7fb293aec64120eaea34ce0aa5f"></script>
   <script src="/js/directives.js?rev=5e0047591b8595973f9946f67db591b2"></script>
   <script  src="/js/agecommon.js?rev=decd93797a37e97b67a65ccc0bd02441"></script>
   <script  src="/js/dashboard.js?rev=eb7f2b950cc005aab7db10aa48298969"></script>
